<resources>
    <string name="app_name">Auxillium</string>
    <string name="action_settings">Settings</string>
    <string name="editText">Technovation 2020!</string>
    <string name="SophiesButton">Sophies button</string>
    <string name="AnirrasButton">Anirras Button</string>
    <string name="profileButton">Profile</string>
    <string name="infoButton">Info</string>
    <string name="settingsButton">Settings</string>
    <string name="levelsButton">Levels</string>
    <string name="infoPage">this is info page</string>
    <string name="levelNumberHome">Level 1: Shooting</string>
    <string name="categoryHome">Public Disasters</string>
    <string name="playText">P L A Y</string>
    <string name="EmergencyMessage">Emergency Message</string>
    <string name="AppName">Auxilium</string>
    <string name="iAmSafe">I Am Safe</string>
    <string name="buttonEarthquake">Earthquake</string>
    <string name="CPRtext">CPR</string>
    <string name="strokeText">Stroke</string>
    <string name="drowningText">Drowning</string>
    <string name="chokingText">Choking</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="hello_world">hello world</string>
    <string name="QuestionText">Question:</string>
    <string name="YourAnswerText">Your Answer:</string>
    <string name="CorrectIncorrectText">Correct/Incorrect:</string>
    <string name="title_CPR">How to Perform CPR:</string>
    <string name="step1_CPR">1.Call 911 or ask a bystander to call 911</string>
    <string name="step2_CPR">2.Open their airway, to do this you can tilt their head back to slightly lift the chin while they are lying on their back</string>
    <string name="step3_CPR">3.Check for breathing (for no more than 10 seconds), occasional gasping sounds does not mean they are breathing. If there is none, begin CPR</string>
    <string name="step4_CPR">4.Place your hands, one on top of the other, in the middle of the chest. Use your body weight to administer compressions that are at least 2 inches deep and around 100 chest compressions per minute. Push hard and fast.</string>
    <string name="step5_CPR">5.Deliver rescue breaths. With the person\'s head tilted back slightly and the chin lifted, pinch the nose shut and place your mouth over the person\'s mouth to make a complete seal. Blow into the person\'s mouth to make the chest rise. Deliver two rescue breaths, then continue compressions.</string>
    <string name="step6_CPR">6.Continue CPR steps. Keep performing cycles of chest compressions and breathing until the person exhibits signs of life, such as breathing, an AED becomes available, or EMS or a trained medical responder arrives on scene.</string>
    <string name="note1_CPR"> Note: If the chest does not rise with the initial rescue breath, re-tilt the head before delivering the second breath. If the chest doesn\'t rise with the second breath, the person may be choking. After each subsequent set of 30 chest compressions, and before attempting breaths, look for an object and, if seen, remove it.</string>
    <string name="note2_CPR">  Note: End the cycles if the scene becomes unsafe or you cannot continueeath, the person may be choking. After each subsequent set of 30 chest compressions, and before attempting breaths, look for an object and, if seen, remove it.</string>
    <string name="Q1">You hear gunshots and see a shooter, what should you do?</string>
    <string name="Q1_A1">Run and Escape</string>
    <string name="Q1_A2">Grab your phone and other belongings</string>
    <string name="Q1_A3">Call 911</string>
    <string name="Q1_A4">Hide behind other people</string>
    <string name="Q2">You start running and realize that there are no exits near you, what should you do?</string>
    <string name="Q2_A1">Jump in front of the shooter to startle them</string>
    <string name="Q2_A2">Maintain eye-contact with the shooter</string>
    <string name="Q2_A3">Hide out of the shooter\'s view</string>
    <string name="Q2_A4">Try to find your friends or another group of people</string>
    <string name="Q3">The shooter is coming towards you and you can not escape, what should you do?</string>
    <string name="Q3_A1">Scream</string>
    <string name="Q3_A2">Stay still</string>
    <string name="Q3_A3">Fight the shooter aggressively</string>
    <string name="Q3_A4">Turn around and hope you are not seen</string>
    <string name="Q4">The shooter falls to the ground, what should you do?</string>
    <string name="Q4_A1">Run from the shooter and call 911</string>
    <string name="Q4_A2">Post the story on social media</string>
    <string name="Q4_A3">Run from the shooter and call your family</string>
    <string name="Q4_A4">Call your best friend</string>
    <string name="S1_End">Good Try!</string>
    <string name="S1_Congrats">Congratulations!</string>
    <string name="S1_Try">Try harder.</string>
    <string name="Blank"> </string>
    <string name="Q1Earthquake">You feel an earthquake, what should you do?</string>
    <string name="Q1_A1Earthquake">Run outside</string>
    <string name="Q1_A2Earthquake">Get under a roof</string>
    <string name="Q1_A3Earthquake">Drop to the ground</string>
    <string name="Q1_A4Earthquake">Panic</string>
    <string name="Q2Earthquake">What should you do next?</string>
    <string name="Q2_A1Earthquake">Cover your neck and head, and get under a table</string>
    <string name="Q2_A2Earthquake">Call your parents</string>
    <string name="Q2_A3Earthquake">Scream for help</string>
    <string name="Q2_A4Earthquake">Hide under a glass table</string>
    <string name="Q3Earthquake">What should you do next?</string>
    <string name="Q3_A1Earthquake">Hold onto a sturdy object</string>
    <string name="Q3_A2Earthquake">Run for help</string>
    <string name="Q3_A3Earthquake">Call 911</string>
    <string name="Q3_A4Earthquake">Get under a tree</string>
    <string name="Q4Earthquake">The earthquake has stopped, what should you do?</string>
    <string name="Q4_A1Earthquake">Scream “Yay”</string>
    <string name="Q4_A2Earthquake">Post the story on social media</string>
    <string name="Q4_A3Earthquake">Call 911</string>
    <string name="Q4_A4Earthquake">Check for injuries</string>
    <string name="Q5Earthquake">No one is injured, what should you do?</string>
    <string name="Q5_A1Earthquake">Call to make sure your friends and family are okay</string>
    <string name="Q5_A2Earthquake">Carry on with your day</string>
    <string name="Q5_A3Earthquake">Listen to a radio for emergency updates and reports</string>
    <string name="Q5_A4Earthquake">Call 911</string>
    <string name="Q1Covid19">How should you sneeze?</string>
    <string name="Q1_A1Covid19">Away from any source of water</string>
    <string name="Q1_A2Covid19">Anywhere, it does not matter</string>
    <string name="Q1_A3Covid19">Into your elbow, or a tissue</string>
    <string name="Q1_A4Covid19">Into your clothes</string>
    <string name="Q2Covid19">How long should you wash your hands?</string>
    <string name="Q2_A1Covid19">10 seconds</string>
    <string name="Q2_A2Covid19">20 seconds</string>
    <string name="Q2_A3Covid19">30 seconds</string>
    <string name="Q2_A4Covid19">40 seconds </string>
    <string name="Q3Covid19">What part of your body should you especially not touch?</string>
    <string name="Q3_A1Covid19">Your feet</string>
    <string name="Q3_A2Covid19">Your hair</string>
    <string name="Q3_A3Covid19">Your arms</string>
    <string name="Q3_A4Covid19">Your face</string>
    <string name="Q4Covid19">How far away should you stay from others?</string>
    <string name="Q4_A1Covid19">3 feet</string>
    <string name="Q4_A2Covid19">6 feet</string>
    <string name="Q4_A3Covid19">10 feet</string>
    <string name="Q4_A4Covid19">15 feet</string>
    <string name="Q5Covid19">Which of these is the most true?</string>
    <string name="Q5_A1Covid19">It is okay for you to go outside</string>
    <string name="Q5_A2Covid19">You should stay home unless you need to go out for essentials</string>
    <string name="Q5_A3Covid19">Do not stay inside</string>
    <string name="Q5_A4Covid19">You must not leave your house at all for any reason</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="signUp">Sign Up</string>
    <string name="Name">Name</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Email">Email</string>
    <string name="Register">Register</string>
</resources>